# GameVerse

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
docs/: configuration.md  coordinate_transformation_guide.md  embedding_model_config.md  setup_ace_attorney.md  setup_angry_birds.md  setup_baba_is_you.md  setup_civilization.md  setup_forza_horizon5.md  setup_genshin.md  setup_maze.md  setup_metro.md  setup_pvz.md  setup_red_dead_redemption2.md  setup_slay_the_spire.md  setup_snake.md  setup_tic_tac_toe.md  setup_twenty_fourty_eight.md  video_reflection_guide.md
docs/milestone/civilization/: milestones.json
docs/milestone/genshin/: milestones.json
docs/milestone/pwaat/: milestones.json
docs/milestone/rdr2/: milestones.json
docs/milestone/scene_investigators_demo/: milestones.json
scripts/: generate_milestone.py  generate_reflection.py  play_game.py  playvideo_gen.py
scripts/leaderboard/ace_attorney/: ace_attorney.ps1
scripts/leaderboard/angry_birds/: angry_birds.ps1  angry_birds.sh
scripts/leaderboard/baba_is_you/: baba_is_you.ps1  baba_is_you.sh
scripts/leaderboard/civilization/: civilization.ps1  civilization.sh
scripts/leaderboard/forza_horizon5/: forza_horizon5.ps1  forza_horizon5.sh  forza_horizon5_vl.ps1  forza_horizon5_vl.sh
scripts/leaderboard/genshin/: genshin.ps1  genshin.sh
scripts/leaderboard/maze/: maze.ps1  maze.sh
scripts/leaderboard/metro/: metro.ps1  metro.sh
scripts/leaderboard/pvz/: pvz.ps1  pvz.sh  pvz_calibrate.py
scripts/leaderboard/red_dead_redemption2/: red_dead_redemption2.ps1  red_dead_redemption2.sh
scripts/leaderboard/slay_the_spire/: slay_the_spire.bat  slay_the_spire.ps1  slay_the_spire.sh  slay_the_spire_vl.sh
scripts/leaderboard/snake/: snake.ps1  snake.sh  snake_batch.ps1  snake_batch.sh  snake_batch_vl.ps1  snake_batch_vl.sh  snake_iterative_reflection.ps1  snake_multi_video_timewindow.ps1
scripts/leaderboard/tic_tac_toe/: tic_tac_toe.ps1  tic_tac_toe.sh  tic_tac_toe_iterative_reflection.ps1  tic_tac_toe_multi_video_timewindow.ps1
scripts/leaderboard/twenty_fourty_eight/: twenty_fourty_eight.ps1  twenty_fourty_eight.sh
src/agent_client/: base_agent.py  base_client.py  config_loader.py
src/agent_client/llms/: anthropic_utils.py  deepseek_utils.py  google_utils.py  llm.py  openai_utils.py  qwen_utils.py  seed_utils.py  utils.py
src/agent_client/runner/: action_tool_execution.py  eval.py  multiagent_eval.py
src/agent_servers/: agent_types.py  base_server.py  memory.py  memory_utils.py  prompts_usage.md  qwen_embeddings.py  reflection_manager.py  skill_manager.py  video_reflection.py
src/agent_servers/angry_birds/: __init__.py  config.yaml
src/agent_servers/baba_is_you/: config.yaml
src/agent_servers/civilization/: config.yaml
src/agent_servers/forza_horizon5/: config.yaml
src/agent_servers/genshin/: config.yaml
src/agent_servers/maze/: config.yaml  server.py
src/agent_servers/metro/: config.yaml
src/agent_servers/pvz/: __init__.py  config.yaml
src/agent_servers/pwaat/: config.yaml
src/agent_servers/snake/: config.yaml
src/game_servers/: base_env.py  base_gui_env.py  base_server.py
(+179 files in other folders)
