[project]
name = "GameVerse"
version = "0.0.0-dev"
description = "GameVerse: Can Vision-Language Models Learn from Video-based Reflection?"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["benchmark", "vision-language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

authors = [
    { name = "Kuan Zhang", email = "" },
    { name = "Dongchen Liu", email = "liu-dc23@mails.tsinghua.edu.cn" },
    { name = "Qiyue Zhao", email = ""},
    { name = "Jinkun Hou", email = ""},
    { name = "Xinran Zhang", email = ""},
    { name = "Qinlei Xie", email = ""},
    { name = "Miao Liu", email = ""},
    { name = "Yiming Li", email = ""}
]
dependencies = [
    "ahk",
    "ahk-binary",
    "anthropic",
    "dacite",
    "dashscope",
    "dataclass_wizard",
    "dxcam; sys_platform == 'win32'",
    "google-genai",
    "gymnasium==1.1.1",
    "imageio[ffmpeg]",
    "langchain-chroma",
    "langchain-openai",
    "mcp[cli]",
    "mss",
    "Multi-Template-Matching==1.6.6",
    "numpy",
    "omegaconf",
    "openai",
    "opencv-contrib-python",
    "pandas",
    "pillow>=10.3.0",
    "pyautogui",
    "pydantic",
    "pydirectinput; sys_platform == 'win32'",
    "pygame",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pywin32; sys_platform == 'win32'",
    "pyyaml",
    "rich",
    "screeninfo",
    "tenacity",
    "termcolor",
    "tiktoken",
    "tqdm",
    "transformers",
    "volcengine-python-sdk",
]

[project.urls]
Repository = "https://github.com/iTheresaApocalypse/GeneralGameBench"
Issues = "https://github.com/iTheresaApocalypse/GeneralGameBench/issues"

[tool.black]
target-version = ["py310"]
line-length = 80

[tool.flake8]
extend_exclude = ["third-party"]
extend-ignore = "F811,F841,E203,E402,E712,W503,E501,E721"
per-file-ignores = ["__init__.py:F401"]
max-line-length = 80

[tool.isort]
extend_skip = "third-party"
profile = "black"
line_length = 80
known_first_party = ["game_servers", "agent_servers", "agent_client"]

[tool.setuptools]
packages = ["game_servers", "agent_servers", "agent_client"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_decorators = false
files = "src,tests"
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
enable_error_code = "possibly-undefined,redundant-expr,truthy-bool,truthy-iterable"
warn_unused_configs = false
warn_unused_ignores = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
